--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -10,7 +10,7 @@ RUN apt-get update && \
 	    
 COPY requirements-jupyter.txt /requirements.txt
 
-RUN pip3 install --upgrade pip && pip3 install -r /requirements.txt 
+RUN pip3 install --upgrade pip==9.0.3 && pip3 install -r /requirements.txt 
 
 ENTRYPOINT [ "/usr/local/bin/jupyter" ]
 CMD [ "notebook",  "--allow-root" , "--port=8888", "--ip=0.0.0.0" ]
