--- a/Dockerfile.pygmt
+++ b/Dockerfile.pygmt
@@ -10,6 +10,6 @@ RUN apt-get update && \
 	    
 COPY requirements-pygmt.txt /requirements.txt
 
-RUN pip3 install --upgrade pip && pip3 install -r /requirements.txt 
+RUN pip3 install --upgrade pip==9.0.3 && pip3 install -r /requirements.txt 
 
 ENTRYPOINT  [ "/usr/local/bin/ipython" ]
