Temporary change to GenericMappingTools/gmt-python#222 to support Gmore recent GMT Library

--- a/requirements-pygmt.txt
+++ b/requirements-pygmt.txt
@@ -1,2 +1,2 @@
-git+git://github.com/GenericMappingTools/gmt-python
+git+git://github.com/nc5ng/gmt-python@c539b627305756431acdef73ff266522c96b8880
 ipython
