--- a/Dockerfile.jupyter
+++ b/Dockerfile.jupyter
@@ -1,18 +1,17 @@
-FROM nc5ng/gmt:latest
+## Dockerfile for Jupyter GMT Convenience Image
+##
+ARG GMT_PYTHON_DOCKER_TAG=python
+FROM nc5ng/gmt:$GMT_PYTHON_DOCKER_TAG
 
 LABEL maintainer="akshmakov@nc5ng.org"
-
-RUN apt-get update && \
-    apt-get install -y	python3.5 \
-    	    	    	python3-pip \
-		    	git && \ 
-    rm -rf /var/lib/apt/lists/*
 	    
-COPY requirements-jupyter.txt /requirements.txt
+COPY requirements-jupyter.txt /requirements-jupyter.txt
 
-RUN pip3 install --upgrade pip==9.0.3 && pip3 install -r /requirements.txt 
+COPY ./Example.ipynb /workspace
+
+RUN pip3 install -r /requirements-jupyter.txt 
 
 ENTRYPOINT [ "/usr/local/bin/jupyter" ]
+
 CMD [ "notebook",  "--allow-root" , "--port=8888", "--ip=0.0.0.0" ]
 
-ADD ./Example.ipynb /workspace
