--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,4 +1,7 @@
-FROM nc5ng/gmt:latest
+## Dockerfile for GMT/Python Image based on GMT Base Image
+##
+ARG GMT_DOCKER_TAG=latest
+FROM nc5ng/gmt:$GMT_DOCKER_TAG
 
 LABEL maintainer="akshmakov@nc5ng.org"
 
